changed margins of menu, re #7567

--- a/public/assets/stylesheets/less/navigation.less
+++ b/public/assets/stylesheets/less/navigation.less
@@ -214,7 +214,7 @@ body:not(.fixed) #barTopMenu {
 }
 label[for="barTopMenu-toggle"] {
     .background-icon('hamburger', 'info_alt', 16);
-    background-position: 5px center;
+    background-position: 0px center;
     background-repeat: no-repeat;
 
     color: @white;
@@ -254,7 +254,7 @@ body.fixed {
 
         list-style: none;
         margin: 0px 0px 0px -15px;
-        padding: 0;
+        padding: 0px 0px 0px 0px;
 
         width: -moz-fit-content;
         width: -webkit-fit-content;
@@ -269,7 +269,7 @@ body.fixed {
             filter: contrast(0) brightness(2);
 
             .square(16px);
-            margin-right: 0.4em;
+            margin-right: 0.8em;
         }
 
         li {
