--- a/public/assets/stylesheets/less/responsive.less
+++ b/public/assets/stylesheets/less/responsive.less
@@ -160,7 +160,7 @@ label[for="responsive-toggle"] {
 
 .media-breakpoint-small-down({
     #header, #barTopFont, #barTopMenu, #barBottomLeft .current_page, #barBottommiddle, #barBottomLeft, #barBottomArrow,
-    #tabs, #tabs2, .sidebar-image, #sidebar-navigation, #quicksearch, #layout_footer, li#quicksearch_item {
+    #tabs, #tabs2, .sidebar-image, #sidebar-navigation, #quicksearch, #layout_footer, li#quicksearch_item, #barTopFont {
         display: none !important;
     }
     .responsive-hidden {
