--- a/public/assets/stylesheets/print.less
+++ b/public/assets/stylesheets/print.less
@@ -1,8 +1,8 @@
 @import "mixins.less";
 
 /*******************************************************************************
-    Druck-Stylesheet für Stud.IP
-    - nur pt Größenangaben verwenden
+    Druck-Stylesheet fï¿½r Stud.IP
+    - nur pt Grï¿½ï¿½enangaben verwenden
     - auf background-colors verzichten (werden nicht gedruckt)
 *******************************************************************************/
 html, body {
@@ -28,7 +28,7 @@ body, input, textarea, td, th, blockquote, p, form, ul, h4 {
 #schedule_icons, #edit_inst_entry, #layout_sidebar, #barBottomContainer,
 .messagebox_buttons a.close, a.button, button.button,
 #layout-sidebar, .helpbar-container, .helpbar,
-#skip_link_navigation {
+#skip_link_navigation, #barTopFont {
     display: none !important;
 }
 
