--- a/public/assets/stylesheets/studip-jquery-ui.less
+++ b/public/assets/stylesheets/studip-jquery-ui.less
@@ -15,7 +15,7 @@
     @avatar-border: 2px;
     @element-padding: 2px;
     @icon-size: 16px;
-    
+
     background: none;
     width: 100%;
 
@@ -101,4 +101,8 @@
     .ms-optgroup-label {
         color: @dark-gray-color-60;
     }
+}
+
+.ui-menu .ui-menu-item {
+    list-style: none;
 }
