--- a/public/assets/stylesheets/less/navigation.less
+++ b/public/assets/stylesheets/less/navigation.less
@@ -43,14 +43,12 @@ body:not(.fixed) #barTopMenu {
             &::before {
                 position: absolute;
                 left: 50%;
-                margin-left: 5px;
                 top: 0;
-            }
 
-            // Just draw the badge
-            &::before {
+                margin-left: 5px;
                 .square(16px);
 
+                background-clip: content-box;
                 background-color: @red;
                 border: 3px solid @dark-gray-color-5;
                 border-radius: 50%;
@@ -310,7 +308,7 @@ body.fixed {
                 }
             }
 
-            
+
         }
     }
     #barBottomLeft:hover #barTopMenu,
