--- a/public/assets/stylesheets/less/actionmenu.less
+++ b/public/assets/stylesheets/less/actionmenu.less
@@ -13,6 +13,9 @@
 
         position: relative;
         cursor: pointer;
+        display: inline-block;
+        width: 20px;
+        height: 20px;
     }
 
     .action-menu-content {
