margin changes on avatar, re #7567

--- a/public/assets/stylesheets/less/header.less
+++ b/public/assets/stylesheets/less/header.less
@@ -141,6 +141,7 @@
 
 .header_avatar_container, #header_avatar_menu .action-menu-icon {
   z-index: 1003;
+  margin: 0px;
 }
 
 #notification_marker {
