--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -2117,6 +2117,7 @@ form.default label.packed button {
 .header_avatar_container,
 #header_avatar_menu .action-menu-icon {
   z-index: 1003;
+  margin: 0px;
 }
 #notification_marker {
   width: 48px;
