alert color changes on avatar, re #7567

--- a/public/assets/stylesheets/less/header.less
+++ b/public/assets/stylesheets/less/header.less
@@ -161,8 +161,7 @@
     border: 1px solid @dark-gray-color-40;
 
     &.alert {
-        border: thin solid @white;
-        background-color: @public-course-bgcolor;
+        background-color: @red;
         color: @white;
     }
 }
