position changes on avatar, re #7567

--- a/public/assets/stylesheets/less/header.less
+++ b/public/assets/stylesheets/less/header.less
@@ -116,7 +116,7 @@
     .action-menu-content {
         z-index: 1002;
         position: absolute;
-        top: 32px;
+        top: 34px;
         right: -18px;
         /*padding: 4px 28px 4px 8px;*/
         background: #fff;
@@ -140,8 +140,9 @@
 }
 
 .header_avatar_container, #header_avatar_menu .action-menu-icon {
-  z-index: 1003;
-  margin: 0px;
+    z-index: 1003;
+    margin: 2px 0px 0px 0px;
+    align-items: center;    
 }
 
 #notification_marker {
