--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -2090,7 +2090,7 @@ form.default label.packed button {
 #header_avatar_menu .action-menu-content {
   z-index: 1002;
   position: absolute;
-  top: 32px;
+  top: 34px;
   right: -18px;
   /*padding: 4px 28px 4px 8px;*/
   background: #fff;
@@ -2117,7 +2117,8 @@ form.default label.packed button {
 .header_avatar_container,
 #header_avatar_menu .action-menu-icon {
   z-index: 1003;
-  margin: 0px;
+  margin: 2px 0px 0px 0px;
+  align-items: center;
 }
 #notification_marker {
   width: 48px;
