--- a/public/assets/stylesheets/less/header.less
+++ b/public/assets/stylesheets/less/header.less
@@ -116,8 +116,8 @@
     .action-menu-content {
         z-index: 1002;
         position: absolute;
-        top: 34px;
-        right: -18px;
+        top: 39px;
+        right: -31px;
         /*padding: 4px 28px 4px 8px;*/
         background: #fff;
         box-shadow: 1px 1px 1px @dark-gray-color-60;
@@ -141,8 +141,11 @@
 
 .header_avatar_container, #header_avatar_menu .action-menu-icon {
     z-index: 1003;
-    margin: 2px 0px 0px 0px;
-    align-items: center;    
+    margin: 3px 0px 0px 0px; 
+}
+
+.header_avatar_container {
+    align-items: center;   
 }
 
 #notification_marker {
