border colors, re #7567

--- a/public/assets/stylesheets/less/quicksearch.less
+++ b/public/assets/stylesheets/less/quicksearch.less
@@ -5,8 +5,8 @@ form#quicksearch {
 }
 
 input.quicksearchbox {
-    background-color: @content-color-20;
-    border: 1px solid #485979;
+    background-color: @content-color-10;
+    border: 1px solid @dark-gray-color-40;
     color: @base-color;
     font-size: 14px;
     width: 250px;
