--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -4649,7 +4649,7 @@ form#quicksearch {
 }
 input.quicksearchbox {
   background-color: #e7ebf1;
-  border: 1px solid #485979;
+  border: 1px solid #b1b4b9;
   color: #28497c;
   font-size: 14px;
   width: 250px;
