--- a/public/assets/stylesheets/mixins/colors.less
+++ b/public/assets/stylesheets/mixins/colors.less
@@ -51,6 +51,7 @@ hsvvalue(@red));
 @content-color-60: mix(@content-color, #fff, 60%); // #b8c2d5
 @content-color-40: mix(@content-color, #fff, 40%); // #d0d7e3
 @content-color-20: mix(@content-color, #fff, 20%); // #e7ebf1
+@content-color-10: mix(@content-color, #fff, 10%); // #e7ebf1
 
 @light-gray-color: @dark-gray-color-75;
 @light-gray-color-80: @dark-gray-color-60;
