added red color for new articles. fixes #7671

--- a/public/assets/stylesheets/less/article.less
+++ b/public/assets/stylesheets/less/article.less
@@ -116,3 +116,11 @@ article.studip {
         }
     }
 }
+
+article.new {
+    &.toggle {
+        > header {
+            .icon('before', 'arr_1right', 'new');
+        }
+    }
+}
