--- a/public/assets/stylesheets/less/quicksearch.less
+++ b/public/assets/stylesheets/less/quicksearch.less
@@ -5,7 +5,7 @@ form#quicksearch {
 }
 
 input.quicksearchbox {
-    background-color: @content-color-10;
+    background-color: @dark-gray-color-10;
     border: 1px solid @dark-gray-color-40;
     color: @base-color;
     font-size: 14px;
