--- a/public/assets/stylesheets/less/layouts.less
+++ b/public/assets/stylesheets/less/layouts.less
@@ -67,7 +67,7 @@
 #layout_content {
     .box-sizing(border-box);
     .scrollbox-horizontal();
-    padding: 0 @content-margin @content-margin 20px;
+    padding: 0 @content-margin 20px @content-margin;
     vertical-align: top;
     min-width: @content-width;
 
