--- a/public/assets/stylesheets/style.less
+++ b/public/assets/stylesheets/style.less
@@ -68,6 +68,7 @@
 @import "less/admission.less";
 @import "less/enrolment.less";
 @import "less/dialog.less";
+@import "less/studip-overlay.less";
 @import "less/lists.less";
 @import "less/selects.less";
 @import "less/plus.less";
@@ -282,7 +283,7 @@ div.overdiv {
             height: 1.4em;
             line-height: 1.4;
             padding: 0.4em 1em;
-            
+
             &:hover {
                 background-color: @base-color-60;
                 color: @contrast-content-white;
