normalize course, studygroup and institute pages regarding basic data, re #7740

--- a/public/assets/stylesheets/less/header.less
+++ b/public/assets/stylesheets/less/header.less
@@ -1,5 +1,6 @@
 /* --- header.css ----------------------------------------------------------- */
 #layout_wrapper {
+    .box-sizing(border-box);
     padding-top: @bar-bottom-container-height;
 }
 #barBottomContainer {
