--- a/public/assets/stylesheets/less/index.less
+++ b/public/assets/stylesheets/less/index.less
@@ -4,7 +4,7 @@ div.index_container {
     top: 111px;
     bottom: 0px;
     width: 100%;
-    height: ~"calc(100% - 71px)";
+    height: ~"calc(100% - 110px)";
 
     ul#tabs {
         display: none;
@@ -39,7 +39,7 @@ div.index_container {
         background-color: rgba(255, 255, 255, 0.8);
         box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.5);
         margin-left: 50px;
-        margin-top: 25px;
+        margin-top: 50px;
         width: 500px;
 
         & > div {
@@ -106,5 +106,30 @@ div.index_container {
             }
         }
 
+    }
+}
+
+body#index {
+    .messagebox {
+        margin-bottom: -25px;
+    }
+
+    div#layout_footer {
+        position: relative;
+        top: -33px;
+    }
+}
+
+/* Mozilla specifics */
+@-moz-document url-prefix() {
+    div.index_container {
+        height: calc(100% - 145px);
+    }
+    body#index {
+        height: calc(100% - 34px);
+    }
+    body#index div#layout_footer {
+        position: inherit;
+        top: 0;
     }
 }
