--- a/public/assets/stylesheets/less/mobile.less
+++ b/public/assets/stylesheets/less/mobile.less
@@ -37,6 +37,8 @@
                 margin-top: 36px;
                 padding-left: 20px;
                 padding-right: 20px;
+                position: absolute;
+                top: 200px;
                 width: ~"calc(100% - 40px)";
 
                 nav {
