fixes #7331, style breadcrumb, fix some design quirks, use icon as root element for breadcrumb

--- a/public/plugins_packages/core/Forum/stylesheets/forum.less
+++ b/public/plugins_packages/core/Forum/stylesheets/forum.less
@@ -420,4 +420,16 @@ html.no-js #forum {
     div.posting.bg2 {
         flex: 1;
     }
+
+    #tutorBreadcrumb {
+        float: left;
+        margin-bottom: 1em;
+        font-size: 1.4em;
+    }
+
+    #page-chooser {
+        float: right;
+        padding-right: 10px;
+        margin-bottom: 1em;
+    }
 }
