--- a/public/assets/stylesheets/wysiwyg.css
+++ b/public/assets/stylesheets/wysiwyg.css
@@ -58,3 +58,19 @@
     background-size: 8px;
     padding-right: 9px;
 }
+
+
+/* from plugins/emojione/styles/emojione.css */
+
+.emojione, .cke_hand[data-shortcode] {
+  /* Emoji Sizing */
+  font-size: inherit;
+  height: 30px !important;
+  width: 30px !important;
+
+  /* Inline alignment adjust the margins  */
+  display: inline-block;
+  margin: -.2ex .15em .2ex;
+  line-height: normal;
+  vertical-align: middle;
+}
