forum: shorten internal links as well, re #7098

--- a/public/plugins_packages/core/Forum/stylesheets/forum.less
+++ b/public/plugins_packages/core/Forum/stylesheets/forum.less
@@ -184,7 +184,8 @@ html.no-js #forum {
         a {
             word-break: break-all;
 
-            &.link-extern {
+            &.link-extern,
+            &.link-intern {
                 display: inline-block;
                 max-width: 50vw;
                 overflow: hidden;
