Adjusts collaps arrow for the toolbar, no more blue forms in dialogs, link color, thin border in image dialog, re #7539

--- a/public/assets/stylesheets/wysiwyg.css
+++ b/public/assets/stylesheets/wysiwyg.css
@@ -24,8 +24,93 @@
     z-index: 1;
 }
 
-/* drop zone effects */
+/* CKEDITOR dialogs */
+select.cke_dialog_ui_input_select {
+    background-color: #ffffff !important;
+}
 
+/* CKEDITOR image dialog */
+.cke_dialog .ImagePreviewBox {
+    border: 1px ridge black !important;
+}
+
+/* CKEDITOR mathjax Plugin (TeX) Link color */
+a.cke_mathjax_doc[href] {
+    color: #28497c !important;
+    text-decoration: none !important;
+}
+
+/* Override 'Select Style Menu' CSS */
+.cke_combo_off a.cke_combo_button:hover,
+.cke_combo_off a.cke_combo_button:focus,
+.cke_combo_on a.cke_combo_button:hover,
+.cke_combo_on a.cke_combo_button:focus {
+    -moz-box-shadow: none !important;
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
+}
+.cke_combo_off a.cke_combo_button:active,
+.cke_combo_on a.cke_combo_button:active,
+.cke_combo_on a.cke_combo_button {
+    -moz-box-shadow: none !important;
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
+}
+
+/* The CSS arrow, which belongs to the toolbar collapser. */
+.cke_toolbox_collapser .cke_arrow {
+    display: inline-block;
+
+    /* Pure CSS Arrow */
+
+    width: 5px !important;
+    height: 5px !important;
+    font-size: 12px !important;
+    margin-top: 4px !important;
+    border-left: 0 !important;
+    border-bottom: 0 !important;
+    border-right: 2px solid black !important;
+    border-top: 2px solid black !important;
+    transform: rotate(315deg) !important;
+    /*margin-right: 0.5em;*/
+
+    /*Hide the text.*/
+    text-indent: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.cke_toolbox_collapser.cke_toolbox_collapser_min .cke_arrow {
+    margin-top: 1px !important;
+    transform: rotate(135deg) !important;
+}
+
+.cke_toolbox_collapser {
+    border: none !important;
+    border-bottom-color: transparent !important;
+
+    -moz-border-radius: 0 !important;
+    -webkit-border-radius: 0 !important;
+    border-radius: 0 !important;
+
+    -moz-box-shadow: none !important;
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
+
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#ffffff)) !important;
+    background-image: -moz-linear-gradient(top, #ffffff, #ffffff) !important;
+    background-image: -webkit-linear-gradient(top, #ffffff, #ffffff) !important;
+    background-image: -o-linear-gradient(top, #ffffff, #ffffff) !important;
+    background-image: -ms-linear-gradient(top, #ffffff, #ffffff) !important;
+    background-image: linear-gradient(top, #ffffff, #ffffff) !important;
+    filter: none !important;
+}
+
+.cke_toolbox_collapser:hover {
+    background: #E3EAF6 !important;
+    filter: none !important;
+}
+/* drop zone effects */
 .drag .dropzone {
     display: block;
 }
